# music-functions

./: .env  .env-dev  .gitignore  LICENSE.txt  Makefile  docker-compose.dev.yaml  docker-compose.yaml
_scripts/: sync.sh
api/: Dockerfile  pyproject.toml
api/app/: chords.py  isobar_util.py  lsystems.py  main.py  midi.py  negative_harmony.py
api/app/test/: test_lsystems.py
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  piano_keyboard.js  string_util.js
frontend/src/lib/: ChordProgression.md  ChordProgression.svelte  Credits.md  Credits.svelte  EveryBeat.md  EveryBeat.svelte  Glicol.md  Glicol.svelte  LSystemMelody.svelte  Markdown.svelte  NegativeHarmony.svelte
frontend/src/stores/: chord_progression.js  every_beat.js  glicol.js  lsystem_melody.js  negative_harmony.js
